--- a/Web.Statu/Views/Insolvence/Index.cshtml
+++ b/Web.Statu/Views/Insolvence/Index.cshtml
@@ -35,7 +35,12 @@
     </ol>
 }
 
-@Html.Action("CachedAction_Child_48H", new { model = Model, NameOfView = "Index.Content" })
+@*@Html.Action("CachedAction_Child_48H", new { model = Model, NameOfView = "Index.Content.Charts" })*@
+
+
+@Html.Partial("_SearchForm", new HlidacStatu.Lib.Searching.InsolvenceSearchResult())
+
+@Html.Action("CachedAction_Child_48H", new { model = Model, NameOfView = "Index.Content.Politici" })
 
 <div class="row">
 
@@ -101,7 +106,7 @@
 <div class="bs-callout bs-callout-primary small">
     <h4>Politici a jejich vazby na firmy</h4>
     <p>
-        Pro nás relevantní vazba politika na firmu je, že daná osoba byla (spolu)majitelem firmy anebo působila ve statutárním orgánu společnosti v době, 
+        Pro nás relevantní vazba politika na firmu je, že daná osoba byla (spolu)majitelem firmy anebo působila ve statutárním orgánu společnosti v době,
         kdy byla zahájena insolvence přímo na firmu, kde osoba působila, anebo na libovolnou firmu, kde byl tento vztah nepřímý (tzn. firma s politikem vlastnila firmu B, ta firmu C, ktera spadla do insolvence)
     </p>
 </div>
