--- a/Web.Statu/Views/Shared/_Layout.cshtml
+++ b/Web.Statu/Views/Shared/_Layout.cshtml
@@ -280,6 +280,7 @@
                 <li class="level2"><a href="/data">Další databáze<sup style="top:0;text-decoration:none;color:#777;">@(HlidacStatu.Lib.Data.External.DataSets.DataSetDB.AllDataSets.Get()?.Count().ToString() ?? "")</sup></a></li>
                 <li class="level2"><a href="/reporty">Analýzy a reporty<sup style="top:0;text-decoration:none;color:#777;">@(PocetReportu)</sup></a></li>
                 <li class="level2"><a href="/texty">Komentáře</a></li>
+                <li class="level2"><a href="https://www.hlidacstatu.cz/texty/series/tipy/">Tipy „Jak používat Hlídače“</a></li>
 
                 <li class="level2">
                     <a href="https://www.darujme.cz/projekt/1200384">Podpořte nás</a>
@@ -319,6 +320,7 @@
                     <li class=""><a href="/data">Další databáze<sup style="top:0;text-decoration:none;color:yellow;">@(HlidacStatu.Lib.Data.External.DataSets.DataSetDB.AllDataSets.Get()?.Count().ToString() ?? "")</sup></a></li>
                     <li class=""><a href="/reporty">Analýzy a reporty<sup style="top:0;text-decoration:none;color:yellow;">@(PocetReportu)</sup></a></li>
                     <li class=""><a href="/texty">Komentáře</a></li>
+                    <li class=""><a href="https://www.hlidacstatu.cz/texty/series/tipy/">Tipy „Jak používat Hlídače“</a></li>
                 </ul>
                 <ul>
                     <li>
