--- a/Web.Statu/Views/Shared/_Layout.cshtml
+++ b/Web.Statu/Views/Shared/_Layout.cshtml
@@ -280,10 +280,10 @@
                 <li class="level2"><a href="/data">Další databáze<sup style="top:0;text-decoration:none;color:#777;">@(HlidacStatu.Lib.Data.External.DataSets.DataSetDB.AllDataSets.Get()?.Count().ToString() ?? "")</sup></a></li>
                 <li class="level2"><a href="/reporty">Analýzy a reporty<sup style="top:0;text-decoration:none;color:#777;">@(PocetReportu)</sup></a></li>
                 <li class="level2"><a href="/texty">Komentáře</a></li>
-                <li class="level2"><a href="https://www.hlidacstatu.cz/texty/series/tipy/">Tipy „Jak používat Hlídače“</a></li>
+                <li class="level2"><a href="https://www.hlidacstatu.cz/texty/series/tipy/" onclick="return trackOutLink(this,'headermobile');">Tipy „Jak používat Hlídače“</a></li>
 
                 <li class="level2">
-                    <a href="https://www.darujme.cz/projekt/1200384">Podpořte nás</a>
+                    <a href="https://www.darujme.cz/projekt/1200384" onclick="return trackOutLink(this,'headermobile');">Podpořte nás</a>
                     <a href="/PridatSe">Přidejte se k nám</a>
                 </li>
 
@@ -320,13 +320,13 @@
                     <li class=""><a href="/data">Další databáze<sup style="top:0;text-decoration:none;color:yellow;">@(HlidacStatu.Lib.Data.External.DataSets.DataSetDB.AllDataSets.Get()?.Count().ToString() ?? "")</sup></a></li>
                     <li class=""><a href="/reporty">Analýzy a reporty<sup style="top:0;text-decoration:none;color:yellow;">@(PocetReportu)</sup></a></li>
                     <li class=""><a href="/texty">Komentáře</a></li>
-                    <li class=""><a href="https://www.hlidacstatu.cz/texty/series/tipy/">Tipy „Jak používat Hlídače“</a></li>
+                    <li class=""><a href="https://www.hlidacstatu.cz/texty/series/tipy/" onclick="return trackOutLink(this,'header');">Tipy „Jak používat Hlídače“</a></li>
                 </ul>
                 <ul>
                     <li>
                         <a href="/pridatse">Přidat se</a>
                         @*<a href="https://github.com/HlidacStatu/Web/issues" target="_blank" style="color:orange"><span class="glyphicon glyphicon-alert"></span>&nbsp;Nahlásit chybu</a>*@
-                        <a href="https://www.darujme.cz/projekt/1200384" target="_blank">Podpořte nás</a>
+                        <a href="https://www.darujme.cz/projekt/1200384" target="_blank" onclick="return trackOutLink(this,'header');">Podpořte nás</a>
                     </li>
                 </ul>
             </div>
