--- a/Web.Statu/Views/Dotace/Index.cshtml
+++ b/Web.Statu/Views/Dotace/Index.cshtml
@@ -30,6 +30,31 @@
 
 @Html.Partial("_SearchForm", new HlidacStatu.Lib.Searching.DotaceSearchResult())
 
+<h2>Informace k dotacím</h2>
+<div>
+    <p>Zpracováváme dotace z následujících zdrojů:</p>
+    <ul>
+        <li>
+            Cedr - kompletní
+        </li>
+        <li>
+            EU Fondy - podařilo se nám dohledat dotace od roku 2014 do současnosti
+        </li>
+        <li>
+            DotInfo - kompletní
+        </li>
+        <li>
+            SZIF - od roku 2014 do roku 2018 (novější zatím nejsou k dispozici)
+        </li>
+        <li>
+            Czech Invest - kompletní
+        </li>
+    </ul>
+    <p>Některé dotace se mohou objevit vícekrát - strojově v tuto chvíli nejsme schopni detekovat duplicity, protože stav dat v jednotlivých zdrojích neumožní přesné detekování duplicit. Proto celková hodnota udávaná při vyhledávání je pouze orientační, námi vypočtená částka.</p>
+
+</div>
+
+
 <h2>Jak vyhledávat v dotacích</h2>
 <div>
     <dl>
@@ -115,7 +140,7 @@
 <h2>Ukázky možností</h2>
 <ul>
     <li>
-        Hledání podle IČO - <a href="/dotace/hledat?Q=ico:00190489">Nemocnice pardubice</a>, <a href="/dotace/hledat?Q=ico:70994234">SŽDC</a>
+        Hledání podle IČO - <a href="/dotace/hledat?Q=ico:00190489">Nemocnice Pardubice</a>, <a href="/dotace/hledat?Q=ico:70994234">SŽDC</a>
     </li>
     <li>
         Hledání podle příjemce - <a href="/dotace/hledat?Q=jmeno:'Ředitelství silnic a dálnic ČR'">ŘSD</a>, <a href="/dotace/hledat?Q=jmeno:univerzita">Univerzita</a>
