--- a/Web.Statu/Views/Dotace/Index.cshtml
+++ b/Web.Statu/Views/Dotace/Index.cshtml
@@ -129,10 +129,11 @@
             <kbd>holding:12345678</kbd> - IČO matky holdingu, hledá se pro všechny firmy holdingu<br>
             <br>
             <br>
-            <kbd>projekt:"název projektu"</kbd> - dotace se specifickým názvem projektu (např. "TJ Vodní stavby Tábor")<br>
-            <kbd>jmeno:"jméno příjemce"</kbd> - dotace, kde jméno příjemce odpovídá zadanému výrazu ("Ředitelství silnic a dálnic")<br>
+            <kbd>projekt:"název projektu"</kbd> - dotace se specifickým názvem projektu (např. "TJ Vodní stavby Tábor")<br />
+            <kbd>kod:"kód projektu"</kbd> - dotace podle kódu projektu (např. "CZ.03.2.60/0.0/0.0/16_064/0006407")<br />
+            <kbd>jmeno:"jméno příjemce"</kbd> - dotace, kde jméno příjemce odpovídá zadanému výrazu ("Ředitelství silnic a dálnic")<br />
             <kbd>castka:&gt;castka</kbd> - dotace s částkou vyšší než. Možno použí i <kbd>&gt;=</kbd> <kbd>&lt;=</kbd>
-            <kbd>&lt;</kbd><br>
+            <kbd>&lt;</kbd><br />
         </dd>
     </dl>
 </div>
