Link to apiv2 & NP connections

--- a/Web.Statu/Views/ApiV1/Index.cshtml
+++ b/Web.Statu/Views/ApiV1/Index.cshtml
@@ -44,8 +44,8 @@
                             <td>OCR Minion</td>
                             <td>
                                 Api token: <code>@ViewBag.OcrToken</code>
-                                <br/> Více o <a href="https://github.com/HlidacStatu/OcrMinion">dokumentace OCRMinion</a>
-                                <br/><br />
+                                <br /> Více o <a href="https://github.com/HlidacStatu/OcrMinion">dokumentace OCRMinion</a>
+                                <br /><br />
                                 <a href="ocrstat"><i class="fas fa-list-ol"></i> Statistiky a žebříček spuštěných OCR Minion</a>.
                             </td>
                         </tr>
@@ -62,8 +62,8 @@
                                 <a href="/api/v1/index?getocr=1" class="btn btn-warning" target="_blank">
                                     Získat svůj OCR Minion API key
                                 </a>
-                                <br/>
-                                <a href="https://github.com/HlidacStatu/OcrMinion">HlidacStatu OCR Minion na GitHubu</a> 
+                                <br />
+                                <a href="https://github.com/HlidacStatu/OcrMinion">HlidacStatu OCR Minion na GitHubu</a>
                             </td>
                         </tr>
                     }
@@ -71,6 +71,15 @@
                     <tr>
                         <td>Kontakt, API support</td>
                         <td><a style="font-size:130%" href="mailto:api@hlidacstatu.cz">api@hlidacstatu.cz</a></td>
+                    </tr>
+
+                    <tr>
+                        <td>Api v2 beta</td>
+                        <td>
+                            Můžete začít s testováním našeho nového API (zatím beta). V případě jakýchkoliv chyb jsme vám k dispozici. <br />
+                            <a style="font-size:130%" href="https://www.hlidacstatu.cz/api/v2/swagger/index">Dokumentace API v2</a> <br />
+                            <a style="font-size:130%" href="https://www.hlidacstatu.cz/api/v2/swagger/">Swagger file API v2</a>
+                        </td>
                     </tr>
                 </table>
 
