--- a/Web.Statu/Views/Home/ZobrazD.cshtml
+++ b/Web.Statu/Views/Home/ZobrazD.cshtml
@@ -17,8 +17,11 @@
 {
 }
 
-<h3 class="text-center" style="padding-bottom:30px;">Tato stránka není určena pro širokou veřejnost.</h3>
+<h3 class="text-center" style="padding-bottom:30px;">Tato stránka není určena pro širokou veřejnost. Omlouváme se.</h3>
 <p class="text-center">
+    <a class="btn btn-success btn-lg" href="/account/login" role="button">
+        Zalogovat se
+    </a>
     <a class="btn btn-primary btn-lg" href="@(string.IsNullOrEmpty(ViewBag.NextUrl) ? Html.Raw("/") : Html.Raw(Model))" role="button">
         @(string.IsNullOrEmpty(ViewBag.NextUrlText) ? "Pokračovat na titulní stránce" : (string)ViewBag.NextUrlText)
     </a>
